# concrete-core

./: .gitbook.yaml  .gitignore  Cargo.toml  Makefile  README.md
concrete-commons/: Cargo.toml  README.md
concrete-commons/src/: dispersion.rs  key_kinds.rs  parameters.rs
concrete-core/: Cargo.toml  README.md
concrete-core-bench/: Cargo.toml  README.md
concrete-core-bench/src/: aesni.rs  benchmark.rs  core.rs  cuda.rs  default.rs  fft.rs  fftw.rs  main.rs  ntt.rs
concrete-core-ffi/: CMakeLists.txt  Cargo.toml  README.md  build-ffi-and-run-c-tests.sh  build.rs  cbindgen.toml
concrete-core-ffi/compile/: build.rs  cfg_eval.rs  generation.rs  prune.rs
concrete-core-ffi/docs/: index.md
concrete-core-ffi/docs/api/: api.md
concrete-core-ffi/docs/dev/: dev.md  instantiating_and_destroying_objects.md
concrete-core-ffi/docs/user/: user.md
concrete-core-ffi/src/: buffer.rs  compat.rs  lib.rs
concrete-core-ffi/src/backends/: mod.rs
concrete-core-ffi/src/seeders/: apple_secure_enclave_seeder.rs  mod.rs  rdseed_x86_64_seeder.rs  seeder_builder.rs  unix_seeder.rs
concrete-core-ffi/tests/: CMakeLists.txt  test_cuda_lwe_bootstrap.c  test_cuda_lwe_ciphertext_conversion.c  test_cuda_lwe_keyswitch.c  test_lwe_bit_extraction.c  test_lwe_bit_extraction_fftw.c  test_lwe_bootstrap_key_to_mut_view_conversion.c  test_lwe_bootstrap_w_bsk_serde.c  test_lwe_encrypt_add_decrypt.c  test_lwe_encrypt_add_plaintext_decrypt.c  test_lwe_encrypt_keyswitch_w_ksk_serde_decrypt.c  test_lwe_encrypt_mul_cleartext_decrypt.c  test_lwe_encrypt_opp_decrypt.c  test_lwe_encrypt_w_sk_serde_decrypt.c  test_lwe_keyswitch_key_to_mut_view_conversion.c  test_lwe_vector_encrypt_decrypt.c  test_lwe_wop_pbs.c  test_lwe_wop_pbs_w_cbs_pfpksk_serde.c  test_lwe_wop_pbs_w_cbs_pfpksk_serde_fftw.c  utils.c  utils.h
concrete-core-fixture/: Cargo.toml
concrete-core-fixture/src/fixture/: cleartext_array_creation.rs  cleartext_array_discarding_retrieval.rs  cleartext_array_retrieval.rs  cleartext_creation.rs  cleartext_discarding_retrieval.rs  cleartext_retrieval.rs  cleartext_vector_creation.rs  cleartext_vector_discarding_retrieval.rs  cleartext_vector_retrieval.rs  glwe_ciphertext_array_decryption.rs  glwe_ciphertext_array_discarding_decryption.rs  glwe_ciphertext_array_discarding_encryption.rs  glwe_ciphertext_array_encryption.rs  glwe_ciphertext_array_trivial_decryption.rs  glwe_ciphertext_array_trivial_encryption.rs  glwe_ciphertext_array_zero_encryption.rs  glwe_ciphertext_consuming_retrieval.rs  glwe_ciphertext_conversion.rs  glwe_ciphertext_creation.rs  glwe_ciphertext_decryption.rs  glwe_ciphertext_discarding_decryption.rs  glwe_ciphertext_discarding_encryption.rs  glwe_ciphertext_discarding_trivial_encryption.rs  glwe_ciphertext_encryption.rs  glwe_ciphertext_ggsw_ciphertext_discarding_external_product.rs  glwe_ciphertext_ggsw_ciphertext_external_product.rs  glwe_ciphertext_leveled_multiplication.rs  glwe_ciphertext_tensor_product_same_key.rs  glwe_ciphertext_trivial_decryption.rs  glwe_ciphertext_trivial_encryption.rs  glwe_ciphertext_vector_decryption.rs  glwe_ciphertext_vector_discarding_decryption.rs  glwe_ciphertext_vector_discarding_encryption.rs  glwe_ciphertext_vector_encryption.rs  glwe_ciphertext_vector_trivial_decryption.rs  glwe_ciphertext_vector_trivial_encryption.rs  glwe_ciphertext_vector_zero_encryption.rs  glwe_ciphertext_zero_encryption.rs  glwe_ciphertexts_ggsw_ciphertext_fusing_cmux.rs  glwe_relinearization_key_creation.rs  (+120 more)
concrete-core-fixture/src/generation/: mod.rs
concrete-core-fixture/src/raw/: generation.rs  statistical_test.rs
concrete-core-representation/: Cargo.toml  README.md
concrete-core-representation/src/: cfg_eval.rs  lib.rs  misc.rs  naming.rs
concrete-core-representation/src/ccr/: abstract_engine_trait_impl.rs  abstract_entity_trait_impl.rs  backend.rs  cfg_lang.rs  cfg_stack.rs  concrete_core.rs  config.rs  dispersion.rs  engine.rs  engine_trait_impl.rs  engine_trait_impl_arg.rs  engine_trait_impl_checked_method.rs  engine_trait_impl_generic_argument.rs  engine_trait_impl_return.rs  engine_trait_impl_unchecked_method.rs  engine_type_definition.rs  entity.rs  entity_ownership.rs  entity_trait_impl.rs  entity_type_definition.rs  inline.rs  misc.rs  mod.rs  parameter.rs  struct_definition.rs
concrete-core-test/: Cargo.toml  README.md
concrete-core-test/src/: aesni.rs  core.rs  cuda.rs  default.rs  fft.rs  fftw.rs  lib.rs  multithread.rs  ntt.rs
concrete-core-wasm/: Cargo.toml  README.md
concrete-core-wasm/src/: commons.rs  entities.rs  lib.rs  seeder.rs
concrete-core-wasm/src/engines/: default_engine.rs  default_parallel_engine.rs  default_serialization_engine.rs  mod.rs
concrete-core-wasm/tests/: test.js
concrete-core/benches/: bench.rs
concrete-core/docs/: README.md  SUMMARY.md  conf.py  index.rst
concrete-core/docs/api/: backend_cuda.md  backend_default.md  backends.md  ciphertext_entities.md  index.rst
concrete-core/docs/api_reference/: concrete-core-ffi.md  concrete-core-wasm.md
concrete-core/docs/backends/: activating_backends.md  backend_fft.md  (+3 more)
concrete-core/src/: lib.rs  prelude.rs  test.rs
concrete-cpu/: Cargo.toml  build.rs  concrete-cpu.h
concrete-cpu/benches/: bench.rs
concrete-cpu/src/: keyswitch.rs  lib.rs  linear_op.rs  types.rs  wop_pbs.rs
concrete-csprng/: Cargo.toml  build.rs
concrete-csprng/src/: lib.rs  main.rs  software.rs
concrete-cuda/: Cargo.toml  README.md  build.rs
concrete-cuda/cuda/: CMakeLists.txt
concrete-cuda/src/: cuda_bind.rs
concrete-ffi/tests/: CMakeLists.txt  test_lwe_bootstrap_w_bsk_serde.c  test_lwe_encrypt_add_decrypt.c  test_lwe_encrypt_add_plaintext_decrypt.c  test_lwe_encrypt_keyswitch_w_ksk_serde_decrypt.c  test_lwe_encrypt_mul_cleartext_decrypt.c  test_lwe_encrypt_opp_decrypt.c  test_lwe_encrypt_w_sk_serde_decrypt.c  utils.c  utils.h
concrete-npe/: Cargo.toml  README.md
concrete-npe/src/: key_dispersion.rs  lib.rs  operators.rs  tools.rs
external_product_sampling_for_sam/: Cargo.toml
external_product_sampling_for_sam/src/: external_product_correction.py  launch.py  main.rs
(+1410 files in other folders)
