[workspace]

members = [
    "concrete-npe",
    "concrete-core",
    "concrete-csprng",
    "concrete-tasks",
    "concrete-core-bench",
    "concrete-core-ffi",
    "concrete-core-fixture",
    "concrete-core-test",
    "concrete-core-wasm",
    "concrete-cuda",
]

[profile.release]
lto = "fat"

[profile.bench]
lto = "fat"
