[workspace]

members = [
    "concrete-npe",
    "concrete-core",
    "concrete-csprng",
    "concrete-tasks",
    "concrete-core-bench",
    "concrete-core-ffi",
    "concrete-core-fixture",
    "concrete-core-test",
    "concrete-core-wasm",
    "concrete-core-representation",
    "concrete-cuda",
]

[profile.release]
lto = "fat"

[profile.release-debug-asserts]
inherits = "release"
debug-assertions = true

[profile.bench]
lto = "fat"
