[package]
name = "concrete-commons"
version = "0.2.2"
edition = "2021"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "BSD-3-Clause-Clear"
description = "Common tools for the concrete FHE library."
homepage = "https://www.zama.ai/concrete-framework"
documentation = "https://docs.zama.ai/concrete/lib"
repository = "https://github.com/zama-ai/concrete-core"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[lib]
name = "concrete_commons"
bench = false

[dependencies]
serde = { version = "1.0", optional = true }

[features]
serde_serialize = ["serde", "serde/derive"]
