[package]
name = "concrete-core-bench"
version = "0.0.0"
edition = "2018"
license = "BSD-3-Clause-Clear"

[dependencies]
concrete-core = { path="../concrete-core" }
concrete-csprng = { path = "../concrete-csprng"}
concrete-core-fixture = { path="../concrete-core-fixture" }
paste = "1.0"
criterion = "0.3.5"

[features]
backend_default = ["concrete-core/backend_default", "concrete-core-fixture/backend_default"]
backend_fftw = ["concrete-core/backend_fftw", "concrete-core-fixture/backend_fftw"]
backend_x86_64_aesni = ["concrete-core/backend_x86_64_aesni", 
    "concrete-core-fixture/backend_x86_64_aesni"]
parallel = ["concrete-core/parallel", "concrete-core-fixture/parallel"]
