[package]
name = "concrete-core-bench"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
concrete-core = { path = "../concrete-core" }
concrete-csprng = { path = "../concrete-csprng" }
concrete-core-fixture = { path = "../concrete-core-fixture" }
paste = "1.0"
criterion = "0.3.5"

[features]
backend_default = ["concrete-core/backend_default"]
backend_fftw = [
    "concrete-core/backend_fftw",
    "concrete-core-fixture/backend_fftw",
]
parallel = ["concrete-core/parallel", "concrete-core-fixture/parallel"]
