[package]
name = "concrete-core-bench"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
concrete-core = { path = "../concrete-core" }
concrete-csprng = { path = "../concrete-csprng" }
concrete-core-fixture = { path = "../concrete-core-fixture" }
paste = "1.0"
criterion = "0.3.5"

[features]
backend_default = [
    "concrete-core/backend_default",
    "concrete-core-fixture/backend_default",
]
backend_fft = ["concrete-core/backend_fft", "concrete-core-fixture/backend_fft"]
backend_fft_nightly_avx512 = ["concrete-core/backend_fft_nightly_avx512"]
backend_default_parallel = [
    "concrete-core/backend_default_parallel",
    "concrete-core-fixture/backend_default_parallel",
]
backend_fft_parallel = [
    "concrete-core/backend_fft_parallel",
    "concrete-core-fixture/backend_fft_parallel",
]
backend_cuda = [
    "concrete-core/backend_cuda",
    "concrete-core-fixture/backend_cuda",
]
backend_default_generator_x86_64_aesni = [
    "concrete-core/backend_default_generator_x86_64_aesni",
    "concrete-core-fixture/backend_default_generator_x86_64_aesni",
]
backend_default_generator_aarch64_aes = [
    "concrete-core/backend_default_generator_aarch64_aes",
    "concrete-core-fixture/backend_default_generator_aarch64_aes",
]

optimized_benches_for_x86_64 = [
    "concrete-core-fixture/fixture_generator_x86_64_aesni",
]
optimized_benches_for_x86_64-cuda = ["optimized_benches_for_x86_64"]
optimized_benches_for_aarch64 = [
    "concrete-core-fixture/fixture_generator_aarch64_aes",
]

x86_64 = [
    "backend_default",
    "backend_default_parallel",
    "backend_fft",
    "backend_default_generator_x86_64_aesni",
    "optimized_benches_for_x86_64",
]
x86_64-cuda = ["x86_64", "backend_cuda", "optimized_benches_for_x86_64-cuda"]
aarch64 = [
    "backend_default",
    "backend_default_parallel",
    "backend_fft",
    "backend_default_generator_aarch64_aes",
    "optimized_benches_for_aarch64",
]
