[package]
name = "concrete-core-ffi"
version = "0.2.0"
edition = "2021"
authors = ["Zama team"]
license = "BSD-3-Clause-Clear"
description = "Foreign Function Interface for the Concrete core library"
homepage = "https://www.zama.ai/concrete-framework"
documentation = "https://docs.zama.ai/concrete/core-lib/"
repository = "https://github.com/zama-ai/concrete-core"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete-core = { path = "../concrete-core" }

[features]
default = []

# A pure-rust backend
backend_default = ["concrete-core/backend_default"]
backend_default_serialization = ["concrete-core/backend_default_serialization"]

# Enable x86_64 specific aes accelerated CSPRNG
backend_default_generator_x86_64_aesni = [
    "concrete-core/backend_default_generator_x86_64_aesni",
]

backend_default_generator_aarch64_aes = [
    "concrete-core/backend_default_generator_aarch64_aes",
]

# An accelerated backend, using the `fftw` library
backend_fftw = ["concrete-core/backend_fftw"]
backend_fftw_serialization = ["concrete-core/backend_fftw_serialization"]

# An accelerated backend, using the `concrete-fft` library.
backend_fft = ["concrete-core/concrete-fft"]
backend_fft_nightly_avx512 = ["concrete-core/backend_fft_nightly_avx512"]
backend_fft_serialization = ["concrete-core/backend_fft_serialization"]

# Multithreaded key generation
backend_default_parallel = ["concrete-core/backend_default_parallel"]

# Unix specific seeder
seeder_unix = ["concrete-core/seeder_unix"]

# x86_64 specific seeder using rdseed hardware feature
seeder_x86_64_rdseed = ["concrete-core/seeder_x86_64_rdseed"]

x86_64 = [
    "backend_default",
    "backend_default_generator_x86_64_aesni",
    "backend_default_parallel",
    "backend_default_serialization",
    "backend_fftw",
    "backend_fftw_serialization",
    "seeder_unix",
    "seeder_x86_64_rdseed",
]
aarch64 = [
    "backend_default",
    "backend_default_generator_aarch64_aes",
    "backend_default_parallel",
    "backend_default_serialization",
    "backend_fftw",
    "backend_fftw_serialization",
    "seeder_unix",
]

[build-dependencies]
cbindgen = "0.23"

[lib]
name = "concrete_core_ffi"
crate-type = ["staticlib", "cdylib"]
