[package]
name = "concrete-core-fixture"
version = "0.0.0"
edition = "2018"
license = "BSD-3-Clause-Clear"

[dependencies]
concrete-core = { path="../concrete-core" }
concrete-csprng = { path = "../concrete-csprng", features = ["seeder_unix", "generator_x86_64_aesni"]}
concrete-commons = { path="../concrete-commons" }
concrete-npe = { path="../concrete-npe" }
kolmogorov_smirnov = "1.1.0"
paste = "1.0"

[features]
backend_default = []
backend_fftw = ["concrete-core/backend_fftw"]
parallel = ["concrete-core/parallel"]
