[package]
name = "concrete-core-fixture"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
concrete-core = { path = "../concrete-core" }
concrete-csprng = { path = "../concrete-csprng", features = ["seeder_unix"] }
concrete-commons = { path = "../concrete-commons" }
concrete-npe = { path = "../concrete-npe" }
kolmogorov_smirnov = "1.1.0"
paste = "1.0"

[features]
# No backend_default feature as it's required for all tests to work, so always enabled
backend_fftw = ["concrete-core/backend_fftw"]
parallel = ["concrete-core/parallel"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
concrete-csprng = { path = "../concrete-csprng", features = [
    "generator_x86_64_aesni",
] }
[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
concrete-csprng = { path = "../concrete-csprng", features = [
    "generator_soft",
] }
