[package]
name = "concrete-core-fixture"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
concrete-core = { path = "../concrete-core", features = [
    "backend_default",
    "backend_default_parallel",
] }
concrete-csprng = { path = "../concrete-csprng", features = [
    "seeder_unix",
    "generator_soft",
] }
concrete-npe = { path = "../concrete-npe" }
concrete-cuda = { path = "../concrete-cuda", optional = true }
kolmogorov_smirnov = "1.1.0"
paste = "1.0"

[features]
backend_fft = ["concrete-core/backend_fft"]
backend_fft_nightly_avx512 = ["concrete-core/backend_fft_nightly_avx512"]
# We keep a backend_default fixture because not having one proved error prone and inconsistent
backend_default = ["concrete-core/backend_default"]
backend_default_generator_x86_64_aesni = [
    "concrete-core/backend_default_generator_x86_64_aesni",
]
backend_ntt = ["concrete-core/backend_ntt"]
backend_default_parallel = ["concrete-core/backend_default_parallel"]
backend_cuda = ["concrete-core/backend_cuda", "concrete-cuda"]
backend_default_generator_aarch64_aes = [
    "concrete-core/backend_default_generator_aarch64_aes",
]

# Feature to have efficient AES implementation for generation in fixtures
fixture_generator_x86_64_aesni = ["concrete-csprng/generator_x86_64_aesni"]

fixture_generator_aarch64_aes = ["concrete-csprng/generator_aarch64_aes"]
