[package]
name = "concrete-core-test"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
concrete-core = { path = "../concrete-core" }
concrete-csprng = { path = "../concrete-csprng", features = ["seeder_unix"] }
concrete-core-fixture = { path = "../concrete-core-fixture" }
paste = "1.0"

[features]
backend_default = ["concrete-core/backend_default"]
backend_fftw = [
    "concrete-core/backend_fftw",
    "concrete-core-fixture/backend_fftw",
]
backend_fftw_parallel = [
    "concrete-core/backend_fftw_parallel",
    "concrete-core-fixture/backend_fftw_parallel"
]
backend_cuda = [
    "concrete-core/backend_cuda", 
    "concrete-core-fixture/backend_cuda",
]
_ci_do_not_compile = ["concrete-core/_ci_do_not_compile", "concrete-core-fixture/_ci_do_not_compile"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
# This does nothing if backend_default is not requested by the user
concrete-core = { path = "../concrete-core", features = [
    "backend_default_generator_x86_64_aesni",
] }
