[package]
name = "concrete-core-test"
version = "0.0.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[dependencies]
concrete-core = { path = "../concrete-core" }
concrete-csprng = { path = "../concrete-csprng", features = ["seeder_unix"] }
concrete-core-fixture = { path = "../concrete-core-fixture" }
paste = "1.0"

[features]
backend_default = [
    "concrete-core/backend_default",
    "concrete-core-fixture/backend_default",
]
backend_default_parallel = [
    "concrete-core/backend_default_parallel",
     "concrete-core-fixture/backend_default_parallel",
]
backend_fft = ["concrete-core/backend_fft", "concrete-core-fixture/backend_fft"]
backend_fft_nightly_avx512 = ["concrete-core/backend_fft_nightly_avx512"]
backend_cuda = [
    "concrete-core/backend_cuda",
    "concrete-core-fixture/backend_cuda",
]
backend_default_generator_x86_64_aesni = [
    "concrete-core/backend_default_generator_x86_64_aesni",
    "concrete-core-fixture/backend_default_generator_x86_64_aesni",
]
backend_default_generator_aarch64_aes = [
    "concrete-core/backend_default_generator_aarch64_aes",
    "concrete-core-fixture/backend_default_generator_aarch64_aes",
]

optimized_tests_for_x86_64 = [
    "concrete-core-fixture/fixture_generator_x86_64_aesni",
]
optimized_tests_for_x86_64-cuda = ["optimized_tests_for_x86_64"]
optimized_tests_for_aarch64 = [
    "concrete-core-fixture/fixture_generator_aarch64_aes",
]

x86_64 = [
    "backend_default",
    "backend_default_parallel",
    "backend_fft",
    "backend_default_generator_x86_64_aesni",
    "optimized_tests_for_x86_64",
]
x86_64-cuda = ["x86_64", "backend_cuda", "optimized_tests_for_x86_64"]
aarch64 = [
    "backend_default",
    "backend_default_parallel",
    "backend_fft",
    "backend_default_generator_aarch64_aes",
    "optimized_tests_for_aarch64",
]
