[package]
name = "concrete-core-wasm"
version = "0.1.0"
authors = ["Zama team"]
edition = "2018"
license = "BSD-3-Clause-Clear"
description = "Wasm Interface for the Concrete core library"
homepage = "https://www.zama.ai/concrete-framework"
documentation = "https://docs.zama.ai/concrete/core-lib/"
repository = "https://github.com/zama-ai/concrete-core"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
paste = "1.0.7"

[dependencies.concrete-core]
path = "../concrete-core"
default-features = false
features = ["backend_default","backend_default_parallel", "backend_default_serialization"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Should be fixed: This is not used because of workspace ...
opt-level = "s"
