[package]
name = "concrete-cpu"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause-Clear"

[lib]
name = "concrete_cpu"
crate-type = ["lib", "staticlib"]

[dependencies]
concrete-core = { path = "../concrete-core", version = "1.0", features = [
  "backend_default",
  "backend_default_parallel",
  "backend_fft",
] }
libc = { version = "0.2", default-features = false }
pulp = { version = "0.10.2", default-features = false }
dyn-stack = { version = "0.8", default-features = false }
readonly = "0.2"
aligned-vec = { version = "0.5", default-features = false }
concrete-fft = { version = "0.1", default-features = false }
once_cell = "1.16"
bytemuck = "1.12"
num-complex = { version = "0.4", features = ["bytemuck"] }

rayon = { version = "1.6", optional = true }

[features]
default = ["parallel", "std"]
std = ["concrete-fft/std", "aligned-vec/std", "dyn-stack/std", "pulp/std"]
parallel = ["rayon"]
nightly = ["concrete-core/backend_fft_nightly_avx512", "pulp/nightly"]

[build-dependencies]
cbindgen = "0.24"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench"
harness = false
