[package]
name = "concrete-csprng"
version = "0.3.0"
edition = "2021"
authors = ["D. Ligier", "J.B. Orfila", "A. Péré", "S. Tap", "Zama team"]
license = "BSD-3-Clause-Clear"
description = "Cryptographically Secure PRNG used in the FHE concrete library."
homepage = "https://www.zama.ai/concrete-framework"
documentation = "https://docs.zama.ai/concrete/lib"
repository = "https://github.com/zama-ai/concrete-core"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[dependencies]
aes = "0.8.2"
rayon = { version = "1.5.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.133"

[dev-dependencies]
rand = "0.8.3"
criterion = "0.3"

[features]
parallel = ["rayon"]
seeder_x86_64_rdseed = []
seeder_unix = []
generator_x86_64_aesni = []
generator_fallback = []
generator_aarch64_aes = []

x86_64 = [
    "parallel",
    "seeder_x86_64_rdseed",
    "seeder_unix",
    "generator_x86_64_aesni",
    "generator_fallback",
]
x86_64-cuda = ["x86_64"]
aarch64 = [
    "parallel",
    "seeder_unix",
    "generator_aarch64_aes",
    "generator_fallback",
]

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false
required-features = ["seeder_x86_64_rdseed", "generator_x86_64_aesni"]

[[bin]]
name = "generate"
path = "src/main.rs"
required-features = ["seeder_unix", "generator_fallback"]
