[package]
name = "concrete-cuda"
version = "0.1.0"
edition = "2018"
authors = ["Joao Justi", "B. Barbakadze", "A. Leroy", "Zama team"]
license = "BSD-3-Clause-Clear"
description = "Cuda implementation for the concrete FHE library."
homepage = "https://crates.io/crates/concrete"
documentation = "https://concrete.zama.ai"
repository = "https://github.com/zama-ai/concrete"
readme = "README.md"
keywords = ["fully", "homomorphic", "encryption", "fhe", "cryptography"]

[build-dependencies]
cmake = { version = "0.1" }

[dependencies]
thiserror = "1.0"

[features]
_ci_do_not_compile = []
